test/good/functions/var5.px

func f(Int->Bool g, Int x) Bool def
    return g(x)

func h(Int x: 42) Bool def
    return x > 0

print h()
print f(h, -5)
