test/bad/lambdas/lambda04.px

func f(g: Int->Int): Int def
    return g(5)

f(lambda x, y: x)
